[package]
name = "kernel8"
version = "0.1.0"
authors = ["swissChili <swisschili@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
numtoa = "0.2.3"

[build-dependencies]
cc = "1.0"
